Semi-Final integration stuff
Demo code

--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   "homepage": "https://github.com/BuzzSpaceB/Infrastructure",
   "contributors": [
     {
-      "name": "Andreas",
-      "email": "000000000@tuks.co.za"
+      "name": "Andreas du Preez",
+      "email": "u12207871@tuks.co.za"
     },
     {
-      "name": "Trevor",
-      "email": "000000000@tuks.co.za"
+      "name": "Trevor Austin",
+      "email": "u11310856@tuks.co.za"
     },
     {
-      "name": "Michael",
-      "email": "000000000@tuks.co.za"
+      "name": "Michael Nunes",
+      "email": "u12104592@tuks.co.za"
     },
     {
       "name": "Werner Mostert",
