--- a/V1.1/InfrastructureExpress/package.json
+++ b/V1.1/InfrastructureExpress/package.json
@@ -10,6 +10,7 @@
     "CSDS": "https://github.com/BuzzSpaceB/CSDS/tarball/master",
     "Notification": "https://github.com/BuzzSpaceB/Notification/tarball/master",
     "Space": "https://github.com/BuzzSpaceB/Space/tarball/master",
+    "aop": "^0.1.3",
     "application-name": "https://github.com/BuzzSpaceB/Authorization/tarball/master",
     "body-parser": "~1.12.0",
     "broadway": "^0.3.6",
