--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     {
       "name": "Michael Nunes",
-      "email": ""
+      "email": "u12104592@tuks.co.za"
     },
     {
       "name": "Andreas du Preez",
